remove unnecessary parameters faultyRecord and currencyDao from calculateAmounts(); remove unused class FaultRecord